2023-12-31T01:04:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7367431255 # 2219
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-31
* notice: last 14d: unq all: 12 27
* notice: prev accum: outdated-unq outdated-all / unq all: 1460 3408 / 1477 3434
* notice: next accum: outdated-unq outdated-all / unq all: 1462 3411 / 1479 3438
* notice: prev exec diff / last date diff / accum: unq all: +2 +4 -0 -0 / +5 +7 -0 -0 / 5 7
* notice: removed / changed dates: [2023-12-16] / [2023-12-30]

2023-12-30T08:15:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7362991745 # 2217
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-30
* notice: last 14d: unq all: 10 24
* notice: prev accum: outdated-unq outdated-all / unq all: 1460 3408 / 1474 3431
* notice: next accum: outdated-unq outdated-all / unq all: 1460 3408 / 1477 3434
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -1 -2 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [] / [2023-12-16 2023-12-30]

2023-12-30T00:58:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7361035131 # 2216
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-30
* notice: last 14d: unq all: 9 23
* notice: prev accum: outdated-unq outdated-all / unq all: 1459 3406 / 1472 3429
* notice: next accum: outdated-unq outdated-all / unq all: 1460 3408 / 1474 3431
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2023-12-15] / [2023-12-29]

2023-12-29T00:49:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7352562864 # 2213