@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-12-31T01:04:17Z",
+  "timestamp" : "2023-12-31T08:15:35Z",
   "count_outdated" : 3411,
   "uniques_outdated" : 1462,
-  "count" : 3438,
-  "uniques" : 1479,
+  "count" : 3446,
+  "uniques" : 1484,
   "clones" : [
     {
       "timestamp": "2023-12-17T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -75,6 +75,15 @@
       "count_decinc": [ 0, 7 ],
       "uniques": 5,
       "uniques_minmax": [ 3, 5 ],
+      "uniques_decinc": [ 0, 5 ]
+    },
+    {
+      "timestamp": "2023-12-31T00:00:00Z",
+      "count": 8,
+      "count_minmax": [ 8, 8 ],
+      "count_decinc": [ 0, 8 ],
+      "uniques": 5,
+      "uniques_minmax": [ 5, 5 ],
       "uniques_decinc": [ 0, 5 ]
     }
   ]
