@@ -1,10 +1,10 @@
 {
-  "count": 27,
-  "uniques": 12,
+  "count": 34,
+  "uniques": 16,
   "clones": [
     {
       "timestamp": "2023-12-17T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -40,6 +40,11 @@
     {
       "timestamp": "2023-12-30T00:00:00Z",
       "count": 7,
+      "uniques": 5
+    },
+    {
+      "timestamp": "2023-12-31T00:00:00Z",
+      "count": 8,
       "uniques": 5
     }
   ]
