@@ -1,3 +1,12 @@
+2023-12-31T08:15:35Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7369306823 # 2220
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-31
+* notice: last 14d: unq all: 16 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 1462 3411 / 1479 3438
+* notice: next accum: outdated-unq outdated-all / unq all: 1462 3411 / 1484 3446
+* notice: prev exec diff / last date diff / accum: unq all: +5 +8 -0 -1 / +5 +8 -0 -0 / 5 8
+* notice: removed / changed dates: [] / [2023-12-17 2023-12-31]
+
 2023-12-31T01:04:17Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7367431255 # 2219
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-31
